Refactor CounterTradeRangeAction API to use area and connectedAreas, replacing exportingArea and importingArea
Signed-off-by: vcardozo <victor.cardozo@artelys.com>